# dora-agent

./: .gitignore  Cargo.toml  README.md  config.toml  dataflow.yml
common/: Cargo.toml
common/src/: config.rs  descriptor.rs  lib.rs  message.rs  status_log.rs  tools.rs
data/: Search_for_AI_from_RSS_feeds.txt  ai_videos_links.txt
file/: Cargo.toml
file/src/: main.rs
file/src/tools/: file.rs
node/: Cargo.toml
node/html/: index.html
node/src/: main.rs  server.rs
react/: Cargo.toml
react/src/: main.rs
reactor/: Cargo.toml
reactor/src/: main.rs  reactor.rs
router/: Cargo.toml
router/src/: main.rs  register.rs  summary.rs  tools.rs
rss/: Cargo.toml
rss/src/: main.rs
status-node/: Cargo.toml
status-node/src/: main.rs
web-search/: Cargo.toml
web-search/src/: main.rs
web-search/src/tools/: mod.rs  web_search.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tasks.rs
