[package]
name = "common"
edition = "2021"
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
dora-node-api = { version = "0.3.10", features = ["tracing"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
eyre = "0.6.8"
schemars = "0.8.22"
regex = "1.11.1"
config = "0.15.11"
rig-core = { version = "0.9.1"}