[package]
name = "file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dora-node-api = { version = "0.3.10", features = ["tracing"] }
futures = "0.3.21"
rand = "0.8.5"
tokio = { version = "1.6.0", features = ["full"] }
schemars = "0.8.22"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rig-core = { version = "0.9.1"}
anyhow = "1.0.86"
eyre = "0.6.8"
regex = "1.11.1"
