[package]
name = "reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dora-node-api = { version = "0.3.10", features = ["tracing"] }
eyre = "0.6.8"
rig-core = { version = "0.9.1"}
tokio = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
serde_repr = "0.1.19"
thirtyfour = "0.35.0"
rand = "0.8.5"
anyhow = "1.0.86"
thiserror = "1.0.63"
reqwest = { version = "0.11.27", features = ["multipart"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
async-trait = "0.1.88"
mockall = "0.13.1"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
schemars = "0.8.22"
