[package]
name = "status-node"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
common = { path = "../common" }
dora-node-api = { version = "0.3.10", features = ["tracing"] }
eyre = "0.6.8"
futures = "0.3.21"
rand = "0.8.5"
tokio = { version = "1.24.2", features = ["full"] }
schemars = "0.8.22"
tracing = "0.1.37"
serde_json = "1.0.140"
axum = "0.8.1"
async-stream = "0.3.6"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
reqwest = { version = "0.11.27", features = ["multipart","stream"] }
reqwest-eventsource = "0.6.0"
eventsource-stream = "0.2"
open = "5.3.2"
