[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
#zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", tag = "1.2.2" }
dora-tracing = "0.3.10"
eyre = "0.6.8"
redis = { version = "0.25.3" , features = ["tokio-comp"]}
#deadpool-redis = { version = "0.15.1",features = ["cluster"] }
bb8 = "0.8.5"
bb8-redis = "0.15.0"


axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower_governor = "0.4.2"


futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.21" }

tokio = { version = "1.6.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = { version = "0.1.6"}
yansi = "0.5"
async-stream = "0.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
bytes = "1.0.0"
futures = { version = "0.3.9", features = ["thread-pool","std"]}
futures-core = { version = "0.3.9", features = ["std"]}
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
serde_repr = "0.1.19"
toml = "0.8.16"
httparse = "1.0"
time = "0.1"
once_cell = "1.5.2"
log = "0.4"
loom = "0.4.0"
num_cpus = "1.13.0"
async-trait = "0.1.74"
protobuf = "2.8"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.6.0"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
rand = "0.8.5"
anyhow = "1.0.86"
thiserror = "1.0.63"
nacos-sdk = { version = "0.4", features = ["default"] }
clap = { version = "4.5.11", features = ["derive"] }
envy = "0.4"

opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24" }
opentelemetry-prometheus = "0.17.0"

regex = "1.10.5"
http-body-util = "0.1.2"
prometheus = "0.13.4"
paste = "1.0"
#rig-core = {git = "https://github.com/451846939/rig.git", branch = "ollama"}
#rig-derive = {git = "https://github.com/451846939/rig.git", branch = "ollama"}
rig-derive = { version = "0.1.0" }
rig-core = { version = "0.9.1"}
rig-qdrant = "0.1.9"
#rig-qdrant = {git = "https://github.com/451846939/rig.git", branch = "ollama"}
markdown = "=1.0.0-alpha.22"
pdf-extract = "0.8.0"
ocrs = "0.9.0"

rten = "0.13.1"
#rten-tensor = "0.13.1"
#rten-imageproc = "0.13.1"
image = "0.25.5"
qdrant-client = "1.13.0"
blake3 = "1.5.5"
base64 = "0.22.1"
reqwest = { version = "0.11.27", features = ["multipart"] }
#google_search_rs = "0.1.0"
thirtyfour = "0.35.0"

#pyo3 = { version = "0.23.4" ,features = ["extension-module"] }